Make sure page title is visible when scrolling
#398

--- a/waltz-ng/style/_util.scss
+++ b/waltz-ng/style/_util.scss
@@ -4,14 +4,15 @@
     -webkit-box-shadow: 0px 1px 2px 0px rgba(47,53,68,1);
     -moz-box-shadow: 0px 1px 2px 0px rgba(47,53,68,1);
     box-shadow: 0px 1px 2px 0px rgba(47,53,68,0.25);
-  //
-  //  @if $inset {
-  //  -webkit-box-shadow:inset $top $left $blur $color;
-  //  -moz-box-shadow:inset $top $left $blur $color;
-  //  box-shadow:inset $top $left $blur $color;
-  //} @else {
-  //  -webkit-box-shadow: $top $left $blur $color;
-  //  -moz-box-shadow: $top $left $blur $color;
-  //  box-shadow: $top $left $blur $color;
-  //}
+}
+
+
+@mixin transition($transition...) {
+
+    -webkit-transition: $transition;
+    -moz-transition: $transition;
+    -ms-transition: $transition;
+    -o-transition: $transition;
+    transition: $transition;
+
 }
